# pyTrigger

./: .gitignore  .travis.yml  README.md  Showcase - pyTrigger.ipynb  pyTrigger.py  pyproject.toml  readme.rst  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
tests/: test_pyTrigger.py  test_ringbuffer.py
